轴角式旋转

--- a/source/_posts/四元数和三维旋转(一).md
+++ b/source/_posts/四元数和三维旋转(一).md
@@ -331,7 +331,7 @@ $$
 如果我们想让 2D 空间中任意一个向量 $\vec{v}$ 旋转 $\theta$ 度，那么我们就可以使用这个矩阵对 $\vec{v}$ 进行变换：
 
 {% note primary %}
-Theorem 1：2D 旋转公式（矩阵型）
+**Theorem 1：2D 旋转公式（矩阵型）**
 $$
 \vec{v'} = \begin{bmatrix}
     \cos(\theta)&-\sin(\theta)\\
@@ -346,7 +346,7 @@ $$
 如果我们将向量 $\vec{v} = \begin{bmatrix} x\\ y\\ \end{bmatrix}$ 看作是一个复数 $v = x + yi$，其中实部为 $x$，虚部为 $y$。那么我们可以构造一个复数 $z = \cos(\theta) + i\sin(\theta)$，并将它与 $v$ 相乘来进行旋转，旋转 $\theta$ 度之后的向量 $v'$ 可以用等价的复数乘法来表示：
 
 {% note primary %}
-Theorem 2：2D 旋转公式（复数积型）
+**Theorem 2：2D 旋转公式（复数积型）**
 $$
 \begin{aligned}
 v' &= zv\\
@@ -363,7 +363,7 @@ $$
 $$
 
 {% note success %}
-欧拉公式的证明：
+**欧拉公式的证明：**  
 
 令 $f(\theta) = \frac{\cos(\theta) + i\sin(\theta)}{e^{i\theta}} = e^{-i\theta}(\cos(\theta) + i\sin(\theta))$，对实数 $\theta$，对 $f(\theta)$ 求导，得到 $f'(\theta) = e^{-i\theta}(i\cos(\theta) - \sin(\theta)) - ie^{-i\theta}(\cos(\theta) + i\sin(\theta)) = 0$，因此 $f(\theta)$ 是常数。又因为 $f(0) = 1$，所以 $f(\theta) \equiv 1$。欧拉公式得证。
 
@@ -394,7 +394,7 @@ $$
 如果仅需要旋转 $\theta$ 度的话，可以令缩放因子 $r = 1$，那么变换后的结果就是
 
 {% note primary %}
-Theorem 3：2D 旋转公式（指数型）
+**Theorem 3：2D 旋转公式（指数型）**
 $$
 v' = e^{i\theta}v
 $$
@@ -454,3 +454,133 @@ z_{net} &= (\cos(\theta) + i\sin(\theta))(\cos(\phi) + i\sin(\phi))\\
 $$
 
 所以，当我们对两个 2D 旋转进行复合时，所得到的变换 $z_{net}$ 仍是一个旋转，而且与施加的次序无关。这个等效变换的旋转角是 $z_{1} 与 $z_{2} 旋转角之和。
+
+## 轴角式旋转 ##
+
+假设我们有一个经过原点的（如果旋转轴不经过原点我们可以先将旋转轴平移到原点，进行旋转，再平移回原处）旋转轴 $\vec{u} = (x,y,z)^T$，我们希望将一个向量 $\vec{v}$，沿着这个旋转轴旋转 $\theta$ 度，变换到 $\vec{v'}$
+
+![](/posts_image/Quaternion/Quaternion_4.png)
+
+我们使用右手坐标系统，并且将使用右手定则来定义旋转的正方向。你可以将右手拇指指向旋转轴 $\vec{u}$ 的正方向，这时其他四个手指弯曲的方向即为旋转的正方向。在上图中即为逆时针方向。
+
+为了消除旋转轴 $\vec{u}$ 模长这个多余的自由度，我们可以规定 $\vec{u}$ 的模长为 1，即 $\vec{u}$ 是一个单位向量。规定 $\vec{u}$ 为单位向量后能为我们带来很多便利，这也是数学和物理中对方向定义的惯例。如果 $\vec{u}$ 不是一个单位向量，我们可以通过下面的公式将它转化为一个单位向量
+$$
+\hat{u} = \frac{\vec{u}}{\lVert \vec{u} \rVert}
+$$
+
+### 旋转的分解 ###
+
+我们可以将 $\vec{v}$ 分解为**平行**于旋转轴 $\vec{u}$ 以及**正交**于 $\vec{u}$ 的两个分量，$\vec{v_{\parallel}}$ 和 $\vec{v_{\perp}}$，即
+$$
+\vec{v} = \vec{v_{\parallel}} + \vec{v_{\perp}}
+$$
+我们可以分别旋转这两个分量，再将它们旋转的结果相加获得旋转后的向量
+$$
+\vec{v'} = \vec{v_{\parallel}'} + \vec{v_{\perp}'}
+$$
+下面是分解的示意图：
+
+![](/posts_image/Quaternion/Quaternion_5.png)
+
+可以看到，$\vec{v_{\parallel}}$ 其实就是 $\vec{v}$ 在 $\vec{u}$ 上的正交投影，根据正交投影公式，我们可以得出：
+
+$$
+\begin{aligned}
+\vec{v_{\parallel}} &= proj_{u}(\vec{v})\\
+&= \frac{\vec{u}\cdot\vec{v}}{\vec{u}\cdot\vec{u}}\vec{u}\\
+&= \frac{\vec{u}\cdot\vec{v}}{\lVert \vec{u} \rVert ^2}\vec{u}\\
+&= (\vec{u}\cdot\vec{v})\vec{u}
+\end{aligned}
+$$
+
+因为 $\vec{v} = \vec{v_{\parallel}} + \vec{v_{\perp}}$，我们可以得到
+$$
+\begin{aligned}
+\vec{v_{\perp}} &= \vec{v} - \vec{v_{\parallel}}\\
+&= \vec{v} - (\vec{u}\cdot\vec{v})\vec{u}
+\end{aligned}
+$$
+
+### $\vec{v_{\parallel}}$ 的旋转 ###
+
+从之前的图示中可以看到，$\vec{v_{\parallel}}$ 其实没有被旋转，仍然与旋转轴 $\vec{u}$ 重合，所以
+{% note primary %}
+**Theorem 4：3D 旋转公式（向量型，平行情况）**  
+当 $\vec{v_{\parallel}}$ 平行于旋转轴 $\vec{u}$ 时，旋转 $\theta$ 角度之后的 $\vec{v_{\parallel}'}$ 为：
+$$
+\vec{v_{\parallel}'} = \vec{v_{\parallel}}
+$$
+{% endnote %}
+
+### $\vec{v_{\perp}}$ 的旋转 ###
+
+接下来，我们需要处理正交于 $\vec{u}$ 的 $\vec{v_{\perp}}$。因为这两个向量是正交的，这个旋转可以看作是平面内的一个旋转。因为旋转不改变 $\vec{v_{\perp}}$ 的长度，所以路径是一个园。下面是这个旋转的示意图，右侧的为俯视图：
+
+![](/posts_image/Quaternion/Quaternion_6.png)
+
+现在，3D 的旋转就被我们转化为了 2D 平面上的旋转，由于在这个平面上我们只有一个向量 $\vec{v_{\perp}}$，用它来表示一个旋转是不够的，我们还需构造一个同时正交于 $\vec{u}$ 和 $\vec{v_{\perp}}$ 的向量 $\vec{w}$，这个可以通过叉乘来获得
+$$
+\vec{w} = \vec{u}\times\vec{v_{\perp}}
+$$
+
+注意叉乘的顺序，因为我们使用的是右手坐标系统，按右手定则这个新的向量 $\vec{w}$ 指向 $\vec{v_{\perp}}$ 逆时针旋转 $\pi / 2$ 后的方向，并且和 $\vec{v_{\perp}}$ 一样也处于正交于 $\vec{u}$ 的平面内，因为 $\lVert\vec{u}\rVert = 1$，我们可以发现：
+$$
+\begin{aligned}
+\lVert\vec{w}\rVert &= \lVert\vec{u}\times\vec{v_{\perp}}\rVert\\
+&= \lVert\vec{u}\rVert\cdot\lVert\vec{v_{\perp}}\rVert\cdot\sin(\pi/2)\\
+&= \lVert\vec{v_{\perp}}\rVert
+\end{aligned}
+$$
+$\vec{w}$ 和 $\vec{v_{\perp}}$ 的模长相同，且 $\vec{w}$ 也位于圆上，我们可以将 $\vec{w}$ 和 $\vec{v_{\perp}}$ 作为平面内的两个坐标轴，我们现在可以把 $\vec{v_{\perp}'}$ 投影到 $\vec{w}$ 和 $\vec{v_{\perp}}$ 上，将其分解为 $\vec{v_{v}'}$ 和 $\vec{v_{w}'}$，利用三角形的知识我们可以得到：
+
+$$
+\begin{aligned}
+\vec{v_{\perp}'} &= \vec{v_{v}'} + \vec{v_{w}'}\\
+&= \cos(\theta)\vec{v_{\perp}} + \sin(\theta)\vec{w}\\
+&= \cos(\theta)\vec{v_{\perp}} + \sin(\theta)(\vec{u}\times\vec{v_{\perp}})
+\end{aligned}
+$$
+
+{% note primary %}
+**Theorem 5：3D 旋转公式（向量型，正交情况）**  
+当 $\vec{v_{\perp}}$ 正交于旋转轴 $\vec{u}$ 时，旋转 $\theta$ 角度之后的 $\vec{v_{\perp}'}$ 为：
+$$
+\vec{v_{\perp}'} = \cos(\theta)\vec{v_{\perp}} + \sin(\theta)(\vec{u}\times\vec{v_{\perp}})
+$$
+{% endnote %}
+
+### $\vec{v}$ 的旋转 ###
+
+将上面两个结果组合可以获得：
+$$
+\begin{aligned}
+\vec{v'} &= \vec{v_{\parallel}'} + \vec{v_{\perp}'}\\
+&= \vec{v_{\parallel}} + \cos(\theta)\vec{v_{\perp}} + \sin(\theta)(\vec{u}\times\vec{v_{\perp}})
+\end{aligned}
+$$
+
+因为叉乘遵守分配律，
+$$
+\begin{aligned}
+\vec{u}\times\vec{v_{\perp}} &= \vec{u}\times(\vec{v} - \vec{v_{\parallel}})\\
+&= \vec{u}\times\vec{v} - \vec{u}\times\vec{v_{\parallel}}\\
+&= \vec{u}\times\vec{v}\quad (\vec{u} 平行于 \vec{v_{\parallel}}，所以 \vec{u}\times\vec{v_{\parallel}} = \vec{0}) 
+\end{aligned}
+$$
+
+最后，将 $\vec{v_{\parallel}} = (\vec{u}\cdot\vec{v})\vec{u}$ 和 $\vec{v_{\perp}} = \vec{v} - (\vec{u}\cdot\vec{v})\vec{u}$ 代入
+$$
+\begin{aligned}
+\vec{v'} &= (\vec{u}\cdot\vec{v})\vec{u} + \cos(\theta)(\vec{v} - (\vec{u}\cdot\vec{v})\vec{u}) + \sin(\theta)(\vec{u}\times\vec{v})\\
+&= \cos(\theta)\vec{v} + (1 - \cos(\theta))(\vec{u}\cdot\vec{v})\vec{u} + \sin(\theta)(\vec{u}\times\vec{v})
+\end{aligned}
+$$
+这样我们就得到了一般形式的旋转公式：
+
+{% note primary %}
+**Theorem 6：3D 旋转公式（向量型，一般情况）**  
+3D 空间中任意一个 $\vec{v}$ 绕着单位向量 $\vec{u}$ 旋转 $\theta$ 角度之后的 $\vec{v_{\perp}'}$ 为：
+$$
+\vec{v'} = \cos(\theta)\vec{v} + (1 - \cos(\theta))(\vec{u}\cdot\vec{v})\vec{u} + \sin(\theta)(\vec{u}\times\vec{v})
+$$
+{% endnote %}
