四元数定义和性质

--- a/source/_posts/四元数和三维旋转(二).md
+++ b/source/_posts/四元数和三维旋转(二).md
@@ -6,3 +6,172 @@ categories: Computer Graphics
 math: true
 ---
 
+## 四元数 ##
+
+所有的四元数 $q \in \mathbb{H}$ 都可以写成下面这种形式：
+$$
+q = a + bi + cj + dk,(a,b,c,d \in \mathbb{R})
+$$
+
+其中
+$$
+i^2 = j^2 = k^2 = ijk = -1
+$$
+
+如果把上式称为四元数的**代数形式**，那么和复数类似，它也有对应的**向量形式一**：
+$$
+q = \begin{bmatrix}
+a\\ b\\ c\\ d\\
+\end{bmatrix}
+$$
+
+如果将四元数 $q$ 的实部和虚部分开，并用一个三维的向量来表示虚部，将它表示为标量和向量的有序对形式，那么四元数还可以表示为下述的**向量形式二**：
+$$
+q = [s, \pmb{v}], (\pmb{v} = \begin{bmatrix} x\\ y\\ z\\ \end{bmatrix},\quad s,x,y,z \in \mathbb{R})
+$$
+
+### 四元数的性质 ###
+
+#### 四元数的模长 ####
+
+仿照复数模长的定义，我们可以暂时将四元数 $q = a + bi + cj + dk$ 的模长定义为
+$$
+\lVert q \rVert = \sqrt{a^2 + b^2 + c^2 + d^2}
+$$
+如果用标量向量有序对的形式进行表示的话，$q = [s, \pmb{v}]$ 的模长为：
+$$
+\lVert q \rVert = \sqrt{s^2 + \lVert\pmb{v}\rVert^2} = \sqrt{s^2 + \pmb{v}\cdot\pmb{v}}
+$$
+
+#### 四元数的加减法 ####
+
+与复数类似，四元数的加法只需要将分量相加就可以了，如果我们有两个四元数 $q_{1} = a + bi + cj + dk$，$q_{2} = e + fi + gj + hk$，那么它们的和为
+$$
+\begin{aligned}
+q_{1} + q_{2} &= a + bi + cj + dk + e + fi + gj + hk\\
+&= (a + e) + (b + f)i + (c + g)j + (d + h)k
+\end{aligned}
+$$
+
+减法同理，将加号改为减号就可以了
+$$
+q_{1} - q_{2} = (a - e) + (b - f)i + (c - g)j + (d - h)k
+$$
+
+如果四元数是以标量向量有序对形式定义的，比如说 $q_{1} = [s, \pmb{v}]$，$q_{2} = [t, \pmb{u}]$，那么
+$$
+q_{1} \pm q_{2} = [s \pm t, \pmb{v}\pm\pmb{u}]
+$$
+
+#### 四元数的标量乘法 ####
+
+如果我们有一个四元数 $q = a + bi + cj + dk$ 和一个标量 $s$，那么它们的乘积为：
+$$
+\begin{aligned}
+sq &= s(a + bi + cj + dk)\\
+&= sa + sbi + scj + sdk
+\end{aligned}
+$$
+
+四元数与标量的乘法遵守交换律，也就是说 $sq = qs$
+
+#### 四元数乘法 ####
+
+四元数之间的乘法不遵守交换律，也就是说一般情况下 $q_{1}q_{2} \neq q_{2}q_{1}$。这也就有了左乘和右乘的区别，如果是 $q_{1}q_{2}$，我们就说"$q_{2}$ 左乘以 $q_{1}$"，如果是 $q_{2}q_{1}$，那我们就说"$q_{2}$ 右乘以 $q_{1}$"。除了交换律之外，结合律和分配律在四元数内都是成立的。
+
+如果有两个四元数 $q_{1} = a + bi + cj + dk$ 和 $q_{2} = e + fi + gj + hk$，那么
+$$
+\begin{aligned}
+q_{1}q_{2} &= (a + bi + cj + dk)(e + fi + gj + hk)\\
+&= ae + afi + agj + ahk +\\
+&\quad bei + bfi^2 + bgij + bhik +\\
+&\quad cej + cfji + cgj^2 + chjk +\\
+&\quad dek + dfki + dgkj + dhk^2
+\end{aligned}
+$$
+
+由 $i^2 = j^2 = k^2 = ijk = -1$ 我们可以推导出 $jk = i$，$ij = k$，$ki = j$，$kj = -i$，$ji = -k$，$ik = -j$，于是我们可以得到：
+
+![](/posts_image/Quaternion/Quaternion_7.png)
+
+容易观察到交换律并不成立。利用上面的表格，我们可以对四元数之间的乘法进行归纳化简：
+$$
+\begin{aligned}
+q_{1}q_{2}
+&= ae + afi + agj + ahk +\\
+&\quad bei + bfi^2 + bgij + bhik +\\
+&\quad cej + cfji + cgj^2 + chjk +\\
+&\quad dek + dfki + dgkj + dhk^2\\
+&= (a\textcolor{red}{e} - b\textcolor{blue}{f} - c\textcolor{green}{g} - d\textcolor{orange}{h})+\\
+&\quad (b\textcolor{red}{e} + a\textcolor{blue}{f} - d\textcolor{green}{g} + c\textcolor{orange}{h})i+\\
+&\quad (c\textcolor{red}{e} + d\textcolor{blue}{f} + a\textcolor{green}{g} - b\textcolor{orange}{h})j+\\
+&\quad (d\textcolor{red}{e} - c\textcolor{blue}{f} + b\textcolor{green}{g} + a\textcolor{orange}{h})k\\
+\end{aligned}
+$$
+
+#### 矩阵形式 ####
+
+可以看到，四元数的相乘其实也是一个线性组合，我们同样可以将它写成矩阵的形式：
+$$
+q_{1}q_{2} = 
+\begin{bmatrix}
+a&-b&-c&-d\\
+b&a&-d&c\\
+c&d&a&-b\\
+d&-c&b&a\\
+\end{bmatrix}
+\begin{bmatrix}
+\textcolor{red}{e}\\
+\textcolor{blue}{f}\\
+\textcolor{green}{g}\\
+\textcolor{orange}{h}\\
+\end{bmatrix}
+$$
+
+注意，这个矩阵所作出的变换等价于**左乘 $q_{1}$**。因为四元数不符合乘法交换律，所以**右乘 $q_{1}$**的变换是一个不同的矩阵，它可以使用完全相同的方法推导而得，下面这个矩阵所作出的变换等价于**右乘 $q_{1}$**
+
+$$
+q_{2}q_{1} = 
+\begin{bmatrix}
+a&-b&-c&-d\\
+b&a&d&-c\\
+c&-d&a&b\\
+d&c&-b&a\\
+\end{bmatrix}
+\begin{bmatrix}
+\textcolor{red}{e}\\
+\textcolor{blue}{f}\\
+\textcolor{green}{g}\\
+\textcolor{orange}{h}\\
+\end{bmatrix}
+$$
+
+#### Graßmann积 ####
+
+重新整理之前的乘法结果：
+
+$$
+\begin{aligned}
+q_{1}q_{2} &= (ae -(bf + cg + dh))+\\
+&\quad(b\textcolor{red}{e} + \textcolor{blue}{a}f + ch - dg)i+\\
+&\quad(c\textcolor{red}{e} + \textcolor{blue}{a}g + df - bh)j+\\
+&\quad(d\textcolor{red}{e} + \textcolor{blue}{a}h + bg - cf)k\\
+\end{aligned}
+$$
+
+如果令 $\pmb{v} = \begin{bmatrix}b\\ c\\ d\\ \end{bmatrix}$，$\pmb{u} = \begin{bmatrix}f\\ g\\ h\\ \end{bmatrix}$，那么
+
+$$
+\pmb{v}\cdot\pmb{u} = bf + cg + dh
+$$
+$$
+\begin{aligned}
+\pmb{v}\times\pmb{u} &= 
+\begin{vmatrix}
+\pmb{i}&\pmb{j}&\pmb{k}\\
+b&c&d\\
+f&g&h\\
+\end{vmatrix}\\
+&= (ch - dg)\pmb{i} - (bh - df)\pmb{j} + (bg - cf)\pmb{k}
+\end{aligned}
+$$
