四元数的性质

--- a/source/_posts/四元数和三维旋转(二).md
+++ b/source/_posts/四元数和三维旋转(二).md
@@ -175,3 +175,73 @@ f&g&h\\
 &= (ch - dg)\pmb{i} - (bh - df)\pmb{j} + (bg - cf)\pmb{k}
 \end{aligned}
 $$
+
+注意 $\pmb{v}\times\pmb{u}$ 的结果是一个向量，这里的 $\pmb{i}、\pmb{j}、\pmb{k}$ 是向量的基，如果使用标量向量有序对形式来表示，$q_{1}q_{2}$ 的结果可以用向量点乘和叉乘的形式表示出来
+
+$$
+q_{1}q_{2} = [ae - \pmb{v}\cdot\pmb{u}, a\pmb{u} + e\pmb{v} + \pmb{v}\times\pmb{u}]
+$$
+
+这个结果也被叫做 **Graßmann积**，一般来说：
+
+{% note primary %}
+**Theorem 7：Graßmann积**  
+对任意四元数 $q_{1} = [s, \pmb{v}]$，$q_{2} = [t, \pmb{u}]$，$q_{1}q_{2}$ 的结果是
+$$
+q_{1}q_{2} = [st - \pmb{v}\cdot\pmb{u}, s\pmb{u} + t\pmb{v} + \pmb{v}\times\pmb{u}]
+$$
+{% endnote %}
+
+#### 纯四元数 ####
+
+实部为零，仅有虚部的四元数为**纯四元数**，即：
+$$
+q = [0, \pmb{v}]
+$$
+
+对于两个纯四元数 $q_{1} = [0, \pmb{v}]$，$q_{2} = [0, \pmb{u}]$，那么它们的乘积为：
+$$
+q_{1}q_{2} = [-\pmb{v}\cdot\pmb{u}, \pmb{v}\times\pmb{u}]
+$$
+
+#### 共轭 ####
+
+四元数 $q = a + bi + cj + dk$ 的**共轭**为 $q^* = a - bi - cj - dk$。如果用标量向量有序对的形式来定义的话，$q = [s, \pmb{v}]$ 的共轭为 $q^* = [s, -\pmb{v}]$。共轭四元数的一个非常有用的性质就是
+$$
+\begin{aligned}
+qq^* &= [s, \pmb{v}]\cdot[s, -\pmb{v}]\\
+&= [s^2 - \pmb{v}\cdot(-\pmb{v}), s(-\pmb{v}) + s\pmb{v} + \pmb{v}\times(-\pmb{v})]\\
+&= [s^2 + \pmb{v}\cdot\pmb{v}, 0]\\
+&= s^2 + x^2 + y^2 + z^2\\
+&= \lVert q \rVert^2
+\end{aligned}
+$$
+结果是一个标量，正是四元数模长的平方。
+$$
+q^*q = (q^*)(q^*)^* = \lVert q^* \rVert^2 = \lVert q \rVert^2
+$$
+我们得到，$q^*q = qq^*$，这个特殊的乘法遵守交换律。
+
+#### 逆 ####
+
+因为四元数乘法不遵守交换律，我们不会将两个四元数相除写为 $\frac{p}{q}$ 的形式，取而代之的是将乘法的逆运算定义为 $pq^{-1}$ 或者 $q^{-1}p$，注意它们的结果一般是不同的。
+
+其中，$q^{-1}$ 是 $q$ 的**逆**，我们规定
+$$
+qq^{-1} = q^{-1}q = 1\quad(q \neq 0)
+$$
+
+右乘 $q$ 的逆运算为右乘 $q^{-1}$，左乘 $q$ 的逆运算为左乘 $q^{-1}$。
+
+利用共轭，我们可以进行如下推导：
+$$
+\begin{aligned}
+qq^{-1} &= 1\\
+q^*qq^{-1} &= q^*\\
+\lVert q \rVert^2q^{-1} &= q^*\\
+q^{-1} &= \frac{q^*}{\lVert q \rVert^2}\\
+\end{aligned}
+$$
+
+四元数的逆就是它的共轭除以它模长的平方。如果 $\lVert q \rVert = 1$，那么它的逆就是它的共轭，此时称 $q$ 为一个**单位四元数**。
+
