四元数与三维旋转

--- a/source/_posts/四元数和三维旋转(一).md
+++ b/source/_posts/四元数和三维旋转(一).md
@@ -579,7 +579,7 @@ $$
 
 {% note primary %}
 **Theorem 6：3D 旋转公式（向量型，一般情况）**  
-3D 空间中任意一个 $\vec{v}$ 绕着单位向量 $\vec{u}$ 旋转 $\theta$ 角度之后的 $\vec{v_{\perp}'}$ 为：
+3D 空间中任意一个 $\vec{v}$ 沿着单位向量 $\vec{u}$ 旋转 $\theta$ 角度之后的 $\vec{v_{\perp}'}$ 为：
 $$
 \vec{v'} = \cos(\theta)\vec{v} + (1 - \cos(\theta))(\vec{u}\cdot\vec{v})\vec{u} + \sin(\theta)(\vec{u}\times\vec{v})
 $$
