--- a/source/_posts/四元数和三维旋转(二).md
+++ b/source/_posts/四元数和三维旋转(二).md
@@ -245,3 +245,413 @@ $$
 
 四元数的逆就是它的共轭除以它模长的平方。如果 $\lVert q \rVert = 1$，那么它的逆就是它的共轭，此时称 $q$ 为一个**单位四元数**。
 
+### 四元数与3D旋转 ###
+
+如果我们需要将一个向量 $\pmb{v}$ 沿着一个用单位向量所定义的旋转轴 $\pmb{u}$ 旋转 $\theta$ 度，那么我们可以将这个向量 $\pmb{v}$ 拆分为正交于旋转轴的 $\pmb{v_{\perp}}$ 以及平行于旋转轴的 $\pmb{v_{\parallel}}$。我们可以对这两个分向量分别进行旋转，获得 $\pmb{v_{\perp}'}$ 和 $\pmb{v_{\parallel}'}$。将它们相加就是 $\pmb{v}$ 旋转之后的结果 $\pmb{v'} = \pmb{v_{\perp}'} + \pmb{v_{\parallel}'$。
+
+我们可以将这些向量定义为纯四元数：
+
+$$
+\begin{aligned}
+v &= [0, \pmb{v}]\\
+v_{\perp} &= [0, \pmb{v_{\perp}}]\\
+v_{\parallel} &= [0, \pmb{v_{\parallel}}]\\
+v' &= [0, \pmb{v'}]\\
+v_{\perp}' &= [0, \pmb{v_{\perp}'}]\\
+v_{\parallel}' &= [0, \pmb{v_{\parallel}'}]\\
+u &= [0, \pmb{u}]
+\end{aligned}
+$$
+
+那么我们就能得到
+
+$$
+v = v_{\parallel} + v_{\perp} \qquad v' = v_{\parallel}' + v_{\perp}'
+$$
+
+和之前一样，我们这里也分开讨论 $v_{\perp}$ 和 $v_{\parallel}$ 的情况。
+
+#### $v_{\perp}$ 的旋转 ####
+
+我们在上一篇推导过，如果一个向量 $\pmb{v_{\perp}}$ 正交于旋转轴 $\pmb{u}$，那么
+
+$$
+\pmb{v_{\perp}'} = \cos(\theta)\pmb{v_{\perp}} + \sin(\theta)(\pmb{u}\times\pmb{v_{\perp}})
+$$
+
+而且，对于两个纯四元数 $q_{1} = [0, \pmb{v}]$，$q_{2} = [0, \pmb{u}]$，那么它们的乘积为 $q_{1}q_{2} = [-\pmb{v}\cdot\pmb{u}, \pmb{v}\times\pmb{u}]$，类似地，
+$$
+uv_{\perp} = [-\pmb{u}\cdot\pmb{v_{\perp}}, \pmb{u}\times\pmb{v_{\perp}}]
+$$
+因为 $\pmb{v_{\perp}}$ 正交于 $\pmb{u}$，所以 $\pmb{u}\cdot\pmb{v_{\perp}} = 0$，也就是说，
+$$
+\begin{aligned}
+uv_{\perp} &= [0, \pmb{u}\times\pmb{v_{\perp}}]\\
+&= \pmb{u}\times\pmb{v_{\perp}}
+\end{aligned}
+$$
+将这个等式以及之前定义的纯四元数代入，而且四元数乘法遵守分配律，我们可以获得：
+$$
+\begin{aligned}
+v_{\perp}' &= \cos(\theta)v_{\perp} + \sin(\theta)(uv_{\perp})\\
+&= (\cos(\theta) + \sin(\theta)u)v_{\perp}
+\end{aligned}
+$$
+
+可以注意到，如果我们将 $(\cos(\theta) + \sin(\theta)u)$ 看作是一个四元数，我们就能将旋转写成四元数的乘积了。到此为止，我们已经将旋转与四元数的积联系起来了。如果令 $q = \cos(\theta) + \sin(\theta)u$，我们能得到
+$$
+v_{\perp}' = qv_{\perp}
+$$
+
+我们可以对 $q$ 继续进行变形：
+$$
+\begin{aligned}
+q &= \cos(\theta) + \sin(\theta)u\\
+&= [\cos(\theta), \pmb{0}] + [0, \sin(\theta)\pmb{u}]\\
+&= [\cos(\theta), \sin(\theta)\pmb{u}]\\
+\end{aligned}
+$$
+
+也就是说，如果旋转轴 $\pmb{u}$ 的坐标为 $\begin{bmatrix}u_{x}\\ u_{y}\\ u_{z}\end{bmatrix}$，旋转角为 $\theta$，那么完成这一旋转所需的四元数 $q$ 可以构造为
+$$
+q = \cos(\theta) + \sin(\theta)u_{x}i + \sin(\theta)u_{y}j + \sin(\theta)u_{z}k
+$$
+这样我们就完成了对 $v_{\perp}$ 的旋转，我们可以得到下面这个定理：
+
+{% note primary %}
+**Theorem 8：3D 旋转公式（四元数型，正交情况）**  
+当 $\pmb{v_{\perp}}$ 正交于旋转轴 $\pmb{u}$ 时，旋转 $\theta$ 角度之后的 $\pmb{v_{\perp}'}$ 可以使用四元数乘法来获得，令 $v_{\perp} = [0, \pmb{v_{\perp}}]$，$q = [\cos(\theta), \sin(\theta)\pmb{u}]$，那么：
+$$
+v_{\perp}' = qv_{\perp}
+$$
+{% endnote %}
+
+这个四元数 $q$ 的模长为 1，它是一个单位四元数，它所代表的变换不会对原向量进行缩放，是一个纯旋转。
+$$
+\begin{aligned}
+\lVert q \rVert &= \sqrt{\cos^2(\theta) + (\sin(\theta)\pmb{u}\cdot\sin(\theta)\pmb{u})}\\
+&= \sqrt{\cos^2(\theta) + \sin^2(\theta)(\pmb{u}\cdot\pmb{u})}\\
+&= \sqrt{\cos^2(\theta) + \sin^2(\theta)(\lVert\pmb{u}\rVert^2)}\\
+&= \sqrt{\cos^2(\theta) + \sin^2(\theta)}\\
+&= 1
+\end{aligned}
+$$
+
+#### $v_{\parallel}$ 的旋转 ####
+
+接下来是平行于旋转轴的 $v_{\parallel}$，由于它平行于旋转轴，所以旋转不会对它作出任何的变换，也就是说：
+
+{% note primary %}
+**Theorem 9：3D 旋转公式（四元数型，平行情况）**  
+当 $\pmb{v_{\parallel}}$ 平行于旋转轴 $\pmb{u}$ 时，旋转 $\theta$ 角度之后的 $\pmb{v_{\parallel}'}$ 可以用四元数写为：
+$$
+v_{\parallel}' = v_{\parallel}
+$$
+{% endnote %}
+
+#### $v$ 的旋转 ####
+
+$$
+\begin{aligned}
+v' &= v_{\parallel}' + v_{\perp}'\\
+&= v_{\parallel} + qv_{\perp} \qquad (其中 q = [\cos(\theta), \sin(\theta)\pmb{u}])
+\end{aligned}
+$$
+
+在进一步化简前，我们需要证明几个引理：
+
+{% note secondary %}
+**Lemma 1**  
+如果 $q = [\cos(\theta), \sin(\theta)\pmb{u}]$，而且 $\pmb{u}$ 为单位向量，那么 $q^2 = qq = [\cos(2\theta), \sin(2\theta)\pmb{u}]$
+{% endnote %}
+
+$Proof$.
+
+$$
+\begin{aligned}
+q^2 &= [\cos(\theta), \sin(\theta)\pmb{u}] \cdot [\cos(\theta), \sin(\theta)\pmb{u}]\\
+&= [\cos^2(\theta) - (\sin(\theta)\pmb{u}\cdot\sin(\theta)\pmb{u}), (\cos(\theta)\sin(\theta) + \sin(\theta)\cos(\theta))\pmb{u} + (\sin(\theta)\pmb{u}\times\sin(\theta)\pmb{u})]\\
+&= [\cos^2(\theta) - \sin^2(\theta)\lVert\pmb{u}\rVert^2, 2\sin(\theta)\cos(\theta)\pmb{u} + \pmb{0}]\\
+&= [\cos^2(\theta) - \sin^2(\theta), 2\sin(\theta)\cos(\theta)\pmb{u}]\\
+&= [\cos(2\theta), \sin(2\theta)\pmb{u}]
+\end{aligned}
+$$
+
+这个引理的几何意义是，如果沿着同一个轴 $\pmb{u}$ 连续旋转 $\theta$ 度两次，那么所作出的变换等同于直接沿着 $\pmb{u}$ 旋转 $2\theta$ 度
+
+那么，我们就能够对原本的旋转公式进行变形了
+
+$$
+\begin{aligned}
+v' &= v_{\parallel} + qv_{\perp} \qquad\qquad (q = [\cos(\theta), \sin(\theta)\pmb{u}])\\
+&= 1 \cdot v_{\parallel} + qv_{\perp}\\
+&= pp^{-1}v_{\parallel} + ppv_{\perp} \quad (令 q = p^2，则 p = [\cos(\frac{1}{2}\theta), \sin(\frac{1}{2}\theta)\pmb{u}])
+\end{aligned}
+$$
+
+在这里，我们引入了一个新的四元数 $p = [\cos(\frac{1}{2}\theta), \sin(\frac{1}{2}\theta)\pmb{u}]$。根据刚刚证明的引理，我们可以验证
+$$
+\begin{aligned}
+pp &= p^2\\
+&= [\cos(2\cdot\frac{1}{2}\theta), \sin(2\cdot\frac{1}{2}\theta)\pmb{u}]\\
+&= [\cos(\theta), \sin(\theta)\pmb{u}] = q
+\end{aligned}
+$$
+
+和 $q$ 一样，$\lVert p \rVert = 1$，$p$ 也是一个单位四元数，也就是说
+$$
+p^{-1} = p^*
+$$
+
+将这个结果代入之前的等式中
+$$
+\begin{aligned}
+v' &= pp^{-1}v_{\parallel} + ppv_{\perp}\\
+&= pp^*v_{\parallel} + ppv_{\perp}
+\end{aligned}
+$$
+
+我们还需再证明两个引理：
+
+{% note secondary %}
+**Lemma 2**  
+假设 $v_{\parallel} = [0, \pmb{v_{\parallel}}]$ 是一个纯四元数，而 $q = [\alpha, \beta\pmb{u}]$，其中 $\pmb{u}$ 是一个单位向量，$\alpha，\beta \in \mathbb{R}$，在这种条件下，如果 $\pmb{v_{\parallel}}$ 平行于 $\pmb{u}$，那么 $qv_{\parallel} = v_{\parallel}q$
+{% endnote %}
+
+$Proof$.
+
+$$
+\begin{aligned}
+LHS &= qv_{\parallel}\\
+&= [\alpha, \beta\pmb{u}]\cdot[0, \pmb{v_{\parallel}}]\\
+&= [0 - \beta\pmb{u}\cdot\pmb{v_{\parallel}}, \alpha\pmb{v_{\parallel}} + \pmb{0} + \beta\pmb{u}\times\pmb{v_{\parallel}}]\\
+&= [-\beta\pmb{u}\cdot\pmb{v_{\parallel}}, \alpha\pmb{v_{\parallel}}] \qquad (\pmb{v_{\parallel}} 平行于 \pmb{u}，所以 \beta\pmb{u}\times\pmb{v_{\parallel}} = \pmb{0})
+\end{aligned}
+$$
+$$
+\begin{aligned}
+RHS &= v_{\parallel}q\\
+&= [0, \pmb{v_{\parallel}}]\cdot[\alpha, \beta\pmb{u}]\\
+&= [0 - \pmb{v_{\parallel}}\cdot\beta\pmb{u}, \pmb{0} + \alpha\pmb{v_{\parallel}} + \pmb{v_{\parallel}}\times\beta\pmb{u}]\\
+&= [-\pmb{v_{\parallel}}\cdot\beta\pmb{u}, \alpha\pmb{v_{\parallel}}] \qquad ({v_{\parallel}} 平行于 \pmb{u}，所以 \pmb{v_{\parallel}}\times\beta\pmb{u} = \pmb{0})\\
+&= [-\beta\pmb{u}\cdot\pmb{v_{\parallel}}, \alpha\pmb{v_{\parallel}}] = LHS \qquad (点乘遵守交换律)
+\end{aligned}
+$$
+
+{% note secondary %}
+**Lemma 3**  
+假设 $v_{\perp} = [0, \pmb{v_{\perp}}]$ 是一个纯四元数，而 $q = [\alpha, \beta\pmb{u}]$，其中 $\pmb{u}$ 是一个单位向量，$\alpha，\beta \in \mathbb{R}$，在这种条件下，如果 $\pmb{v_{\perp}}$ 正交于 $\pmb{u}$，那么 $qv_{\perp} = v_{\perp}q^*$
+{% endnote %}
+
+$Proof$.
+
+$$
+\begin{aligned}
+LHS &= qv_{\perp}\\
+&= [\alpha, \beta\pmb{u}]\cdot[0, \pmb{v_{\perp}}]\\
+&= [0 - \beta\pmb{u}\cdot\pmb{v_{\perp}}, \alpha\pmb{v_{\perp}} + \pmb{0} + \beta\pmb{u}\times\pmb{v_{\perp}}]\\
+&= [0, \alpha\pmb{v_{\perp}} + \beta\pmb{u}\times\pmb{v_{\perp}}] \qquad (\pmb{v_{\perp}} 正交于 \pmb{u}，所以 \beta\pmb{u}\cdot\pmb{v_{\perp}} = 0)
+\end{aligned}
+$$
+$$
+\begin{aligned}
+RHS &= v_{\perp}q^*\\
+&= [0, \pmb{v_{\perp}}]\cdot[\alpha, -\beta\pmb{u}]\\
+&= [0 + \pmb{v_{\perp}}\cdot\beta\pmb{u}, \pmb{0} + \alpha\pmb{v_{\perp}} + \pmb{v_{\perp}}\times(-\beta\pmb{u})]\\
+&= [0, \alpha\pmb{v_{\perp}} + \pmb{v_{\perp}}\times(-\beta\pmb{u})] \qquad ({v_{\perp}} 正交于 \pmb{u}，所以 \pmb{v_{\perp}}\cdot\beta\pmb{u} = 0)\\
+&= [0, \alpha\pmb{v_{\perp}} - (-\beta\pmb{u})\times\pmb{v_{\perp}}] \qquad (\pmb{a}\times\pmb{b} = -\pmb{b}\times\pmb{a})\\
+&= [0, \alpha\pmb{v_{\perp}} + \beta\pmb{u}\times\pmb{v_{\perp}}] = LHS
+\end{aligned}
+$$
+
+现在，我们能对之前的公式做出最后的变形了：
+$$
+\begin{aligned}
+v' &= pp^*v_{\parallel} + ppv_{\perp}\\
+&= pv_{\parallel}p^* + pv_{\perp}p^*\\
+&= p(v_{\parallel} + v_{\perp})p^*\\
+&= pvp^*
+\end{aligned}
+$$
+
+我们可以将上述推导总结为一个定理：
+
+{% note primary %}
+**Theorem 10：3D 旋转公式（四元数型，一般情况）**  
+任意向量 $\pmb{v}$ 沿着以单位向量定义的旋转轴 $\pmb{u}$ 旋转 $\theta$ 度之后的 $\pmb{v'}$ 可以使用四元数乘法来获得。令 $v = [0, \pmb{v}]$，$q = [\cos(\frac{1}{2}\theta), \sin(\frac{1}{2}\theta)\pmb{u}]$，那么：
+$$
+v' = qvq^* = qvq^{-1}
+$$
+{% endnote %}
+
+如果我们有 $q = [\cos(\theta), \sin(\theta)\pmb{u}]$，那么 $v' = qvq^*$ 可以将 $\pmb{v}$ 沿着 $\pmb{u}$ 旋转 $2\theta$ 度。
+
+虽然这个公式非常简洁，但是不够直观，想了解它的真正含义的话，还需将它还原到变形之前的式子：
+$$
+v' = qvq^* = qq^*v_{\parallel} + qqv_{\perp} = v_{\parallel} + q^2v_{\perp}
+$$
+
+也就是说，$qvq^*$ 这个变换，对 $v$ 平行于旋转轴的分量 $v_{\parallel}$ 实施的变换是 $qq^*$，这两个变换完全抵消了，也就是没有旋转，而对于正交于旋转轴的分量 $v_{\perp}$ 则实施的是两次变换 $q^2 = qq$，将它旋转 $\frac{\theta}{2} + \frac{\theta}{2} = \theta$ 度。
+
+实际上，这个公式和上一篇推导的向量型旋转公式完全等价，证明可能会用到 $\pmb{a}\times(\pmb{b}\times\pmb{c}) = (\pmb{a}\cdot\pmb{c})\pmb{b} - (\pmb{a}\cdot\pmb{b})\pmb{c}$ 这个公式
+$$
+qvq^* = [0, \cos(\theta)\pmb{v} + (1 - \cos(\theta))(\pmb{u}\cdot\pmb{v})\pmb{u} + \sin(\theta)(\pmb{u}\times\pmb{v})]
+$$
+
+因为所有的旋转四元数的实部都只是一个角度的余弦值，假设有一个单位四元数 $q = [a, \pmb{b}]$，那么我们可以直接得到
+$$
+\frac{\theta}{2} = \arccos(a) \qquad \pmb{u} = \frac{\pmb{b}}{\sin(\arccos(a))}
+$$
+
+### 3D旋转的矩阵形式 ###
+
+左乘一个四元数 $q = a + bi + cj + dk$ 等同于下面这个矩阵
+$$
+L(q) = \begin{bmatrix}
+a&-b&-c&-d\\
+b&a&-d&c\\
+c&d&a&-b\\
+d&-c&b&a\\
+\end{bmatrix}
+$$
+而右乘 $q$ 等同于这个矩阵
+$$
+R(q) = \begin{bmatrix}
+a&-b&-c&-d\\
+b&a&d&-c\\
+c&-d&a&b\\
+d&c&-b&a\\
+\end{bmatrix}
+$$
+
+所以，我们可以利用这两个公式将 $v' = qvq^*$ 写成矩阵形式。假设 $a = \cos(\frac{\theta}{2})，b = \sin(\frac{\theta}{2})u_{x}，c = \sin(\frac{\theta}{2})u_{y}，d = \sin(\frac{\theta}{2})u_{z}，q = a + bi + cj + dk$，我们就能得到：
+$$
+\begin{aligned}
+qvq^* &= L(q)R(q^*)v \qquad (或者 R(q^*)L(q)v，它们是等价的)\\
+&= \begin{bmatrix}
+a&-b&-c&-d\\
+b&a&-d&c\\
+c&d&a&-b\\
+d&-c&b&a\\
+\end{bmatrix}
+\begin{bmatrix}
+a&b&c&d\\
+-b&a&-d&c\\
+-c&d&a&-b\\
+-d&-c&b&a\\
+\end{bmatrix}v \qquad (注意 R(q^*) = R(q)^T)\\
+&= \begin{bmatrix}
+a^2 + b^2 + c^2 + d^2&ab - ab - cd + cd&ac + bd - ac - bd&ad - bc + bc - ad\\
+ab - ab + cd - cd&b^2 + a^2 - d^2 - c^2&bc - ad - ad + bc&bd + ac + bd + ac\\
+ac - bd - ac + bd&bc + ad + ad + bc&c^2 - d^2 + a^2 - b^2&cd + cd - ab - ab\\
+ad + bc - bc - ad&bd - ac + bd - ac&cd + cd + ab + ab&d^2 - c^2 - b^2 + a^2\\
+\end{bmatrix}v
+\end{aligned}
+$$
+因为 $a^2 + b^2 + c^2 + d^2 = 1$，这个式子能化简为
+$$
+qvq^* = 
+\begin{bmatrix}
+1&0&0&0\\
+0&1 - 2c^2 - 2d^2&2bc - 2ad&2ac + 2bd\\
+0&2bc + 2ad&1 - 2b^2 - 2d^2&2cd - 2ab\\
+0&2bd - 2ac&2ab + 2cd&1 - 2b^2 - 2c^2\\
+\end{bmatrix}v
+$$
+
+这样我们就得到了 3D 旋转的矩阵形式。因为矩阵的第一行和第一列不会对 $v$ 进行任何变换，我们可以将它压缩成 3 $\times$ 3 矩阵（用作 3D 向量的变换）：
+
+{% note primary %}
+**Theorem 11：3D 旋转公式（矩阵型）**  
+任意向量 $\pmb{v}$ 沿着以单位向量定义的旋转轴 $\pmb{u}$ 旋转 $\theta$ 度之后的 $\pmb{v'}$ 可以使用矩阵乘法来获得。令 $a = \cos(\frac{\theta}{2})，b = \sin(\frac{\theta}{2})u_{x}，c = \sin(\frac{\theta}{2})u_{y}，d = \sin(\frac{\theta}{2})u_{z}$，那么：
+$$
+v' = 
+\begin{bmatrix}
+1 - 2c^2 - 2d^2&2bc - 2ad&2ac + 2bd\\
+2bc + 2ad&1 - 2b^2 - 2d^2&2cd - 2ab\\
+2bd - 2ac&2ab + 2cd&1 - 2b^2 - 2c^2\\
+\end{bmatrix}v
+$$
+{% endnote %}
+
+虽然 3D 旋转的矩阵形式可能不如四元数形式简单，而且占用更多的空间，但是对于大批量的变换，使用**预计算**好的矩阵是比四元数乘法更有效率的。
+
+### 旋转的复合 ###
+
+假设有两个表示沿着不同轴，不同角度旋转的四元数 $q_{1}$，$q_{2}$，我们先对 $v$ 进行 $q_{1}$ 的变换，再进行 $q_{2}$ 的变换。
+
+首先，我们实施 $q_{1}$ 的变换，变换后的 $v'$ 为
+$$
+v' = q_{1}vq_{1}^*
+$$
+接下来，对 $v'$ 进行 $q_{2}$ 的变换，得到 $v''$
+$$
+\begin{aligned}
+v'' &= q_{2}v'q_{2}^*\\
+&= q_{2}q_{1}vq_{1}^*q_{2}^*
+\end{aligned}
+$$
+我们需要对这两个变换进行复合，写为一个等价变换的形式：
+$$
+v'' = q_{net}vq_{net}^*
+$$
+
+为了写成上面这种形式，我们还需要一个引理：
+
+{% note secondary %}
+**Lemma 4**  
+对任意四元数 $q_{1} = [s, \pmb{v}]、q_{2} = [t, \pmb{u}]$
+$$
+q_{1}^*q_{2}^* = (q_{2}q_{1})^*
+$$
+{% endnote %}
+
+$Proof$.
+
+$$
+\begin{aligned}
+LHS &= q_{1}^*q_{2}^*\\
+&= [s, -\pmb{v}]\cdot[t, -\pmb{u}]\\
+&= [st - (-\pmb{v})\cdot(-\pmb{u}), s(-\pmb{u}) + t(-\pmb{v}) + (-\pmb{v})\times(-\pmb{u})]\\
+&= [st - \pmb{v}\cdot\pmb{u}, -s\pmb{u} - t\pmb{v} + \pmb{v}\times\pmb{u}]
+\end{aligned}
+$$
+$$
+\begin{aligned}
+RHS &= (q_{2}q_{1})^*\\
+&= ([t, \pmb{u}]\cdot[s, \pmb{v}])^*\\
+&= [ts - \pmb{u}\cdot\pmb{v}, t\pmb{v} + s\pmb{u} + \pmb{u}\times\pmb{v}]\\
+&= [st - \pmb{v}\cdot\pmb{u}, -s\pmb{u} - t\pmb{v} + \pmb{v}\times\pmb{u}] = LHS
+\end{aligned}
+$$
+
+所以我们能得到
+$$
+\begin{aligned}
+v'' &= q_{2}q_{1}vq_{1}^*q_{2}^*\\
+&= (q_{2}q_{1})v(q_{2}q_{1})^*\\
+\end{aligned}
+$$
+
+这也就是说，$q_{net} = q_{2}q_{1}$。注意四元数乘法的顺序，我们先进行的是 $q_{1}$ 的变换，再进行 $q_{2}$ 的变换。这和矩阵与函数的复合非常相似，都是从右往左叠加。
+
+要注意的是，$q_{1}$ 与 $q_{2}$ 的等价旋转 $q_{net}$ 并不是分别沿着 $q_{1}$ 和 $q_{2}$ 的两个旋转轴进行的两次旋转。它是沿着一个全新的旋转轴进行的一次等价旋转，仅仅只有旋转的结果相同。
+
+虽然我们讨论的是两个旋转的复合，但是它可以很容易地推广到多个旋转的复合。比如说我们还需要进行第三个旋转 $q_{3}$，那么
+$$
+\begin{aligned}
+v''' &= q_{3}(q_{2}q_{1})v(q_{2}q_{1})^*q_{3}^*\\
+&= (q_{3}q_{2}q_{1})v(q_{3}q_{2}q_{1})^*
+\end{aligned}
+$$
+它的等价旋转就是 $q_{net} = q_{3}q_{2}q_{1}$
+
+### 双倍覆盖 ###
+
+四元数与 3D 旋转的关系并不是一对一的，同一个 3D 旋转可以使用两个不同的四元数来表示。对任意的四元数 $q = [\cos(\frac{\theta}{2}), \sin(\frac{\theta}{2})\pmb{u}]$，$q$ 与 $-q$ 代表的是同一个旋转。如果 $q$ 表示的是沿着旋转轴 $\pmb{u}$ 旋转 $\theta$ 度，那么 $-q$ 代表的是沿着相反的旋转轴 $-\pmb{u}$ 旋转 $(2\pi - \theta)$ 度：
+$$
+\begin{aligned}
+-q &= [-\cos(\frac{\theta}{2}), -\sin(\frac{\theta}{2})\pmb{u}]\\
+&= [\cos(\pi - \frac{\theta}{2}), \sin(\pi - \frac{\theta}{2})(-\pmb{u})]\qquad (\cos(\pi - \theta) = -\cos(\theta), \sin(\pi - \theta) = \sin(\theta))
+\end{aligned}
+$$
