四元数与三维旋转

--- a/source/_posts/四元数和三维旋转(二).md
+++ b/source/_posts/四元数和三维旋转(二).md
@@ -655,3 +655,98 @@ $$
 &= [\cos(\pi - \frac{\theta}{2}), \sin(\pi - \frac{\theta}{2})(-\pmb{u})]\qquad (\cos(\pi - \theta) = -\cos(\theta), \sin(\pi - \theta) = \sin(\theta))
 \end{aligned}
 $$
+所以，这个四元数旋转的角度为 $2(\pi - \frac{\theta}{2}) = 2\pi - \theta$。从下面的图中我们可以看到，这两个旋转是完全等价的：
+
+![](/posts_image/Quaternion/Quaternion_8.png)
+
+其实从四元数的旋转公式中也能推导出相同的结果
+$$
+(-q)v(-q)^* = (-1)^2qvq^* = qvq^*
+$$
+
+所以，我们经常说单位四元数与 3D 旋转有一个“**2对1满射同态**”关系，或者说单位四元数“**双倍覆盖**”了 3D 旋转。
+
+因为这个映射是满射，我们可以说所有的单位四元数都对应着一个 3D 旋转。或者说，一个四维单位超球面（也叫做 $\mathbb{S}^3$）上任意一点所对应的四元数（$\lVert q \rVert = 1$）都对应着一个 3D 旋转。
+
+有一点需要注意的是，虽然 $q$ 与 $-q$ 是两个不同的四元数，但是由于旋转矩阵中的每一项都包含了四元数两个分量的乘积，它们的旋转矩阵是完全相同的。旋转矩阵并不会出现双倍覆盖的问题。
+
+### 指数形式 ###
+
+在讨论复数的时候，我们利用欧拉公式将 2D 的旋转写成了 $v' = e^{i\theta}v$ 这样的指数形式。实际上，我们也可以利用四元数将 3D 旋转写成类似的形式。
+
+类似于复数的欧拉公式，四元数也有一个类似的公式，如果 $\pmb{u}$ 是一个单位向量，那么对于单位四元数 $u = [0, \pmb{u}]$，有
+$$
+e^{u\theta} = \cos(\theta) + u\sin(\theta) = \cos(\theta) + \pmb{u}\sin(\theta)
+$$
+也就是说，$q = [\cos(\theta), \sin(\theta)\pmb{u}]$ 可以使用指数表示为 $e^{u\theta}$。这个公式的证明与欧拉公式的证明非常类似，直接使用级数展开就可以了。
+
+$Proof$.
+
+我们知道，$e^{x}$，$\sin(x)$，$\cos(x)$ 分别能用泰勒级数展开为：
+
+$$
+\begin{aligned}
+e^{x} &= \sum_{n=0}^{\infty}{\frac{x^{n}}{n!}} = 1 + x + \frac{x^2}{2!} + \frac{x^3}{3!} + \frac{x^4}{4!} + \dots\\
+\sin(x) &= \sum_{n=0}^{\infty}{\frac{(-1)^n}{(2n + 1)!}x^{2n + 1}} = x - \frac{x^3}{3!} + \frac{x^5}{5!} - \frac{x^7}{7!} + \dots\\
+\cos(x) &= \sum_{n=0}^{\infty}{\frac{(-1)^n}{(2n)!}x^{2n}} = 1 - \frac{x^2}{2!} + \frac{x^4}{4!} - \frac{x^6}{6!} + \dots\\
+\end{aligned}
+$$
+
+我们可以将 $x = u\theta$ 代入 $e^x$，得到
+$$
+\begin{aligned}
+LHS = e^{u\theta} &= \sum_{n=0}^{\infty}{\frac{(u\theta)^n}{n!}}\\
+&= 1 + u\theta + \frac{(u\theta)^2}{2!} + \frac{(u\theta)^3}{3!} + \frac{(u\theta)^4}{4!} + \frac{(u\theta)^5}{5!} + \dots\\
+&= 1 + u\theta + \frac{u^2\theta^2}{2!} + \frac{u^3\theta^3}{3!} + \frac{u^4\theta^4}{4!} + \frac{u^5\theta^5}{5!} + \dots\\
+\end{aligned}
+$$
+
+因为 $u^2 = [-\pmb{u}\cdot\pmb{u}, \pmb{0}] = -\lVert u \rVert^2 = -1$，我们可以对 $e^{u\theta}$ 进一步化简
+$$
+\begin{aligned}
+LHS &= 1 + u\theta + \frac{u^2\theta^2}{2!} + \frac{uu^2\theta^3}{3!} + \frac{(u^2)^2\theta^4}{4!} + \frac{u(u^2)^2\theta^5}{5!} + \dots\\
+&= 1 + u\theta - \frac{\theta^2}{2!} - \frac{u\theta^3}{3!} + \frac{\theta^4}{4!} + \frac{u\theta^5}{5!} - \dots\\
+\end{aligned}
+$$
+
+同理，将 $\theta$ 代入 $\cos(x)$ 和 $\sin(x)$，
+$$
+\begin{aligned}
+\sin(\theta) &= \sum_{n=0}^{\infty}{\frac{(-1)^n}{(2n + 1)!}\theta^{2n + 1}}\\
+&= \theta - \frac{\theta^3}{3!} + \frac{\theta^5}{5!} - \frac{\theta^7}{7!} + \dots\\
+\\
+\cos(\theta) &= \sum_{n=0}^{\infty}{\frac{(-1)^n}{(2n)!}\theta^{2n}}\\
+&= 1 - \frac{\theta^2}{2!} + \frac{\theta^4}{4!} - \frac{\theta^6}{6!} + \dots\\
+\end{aligned}
+$$
+
+所以，
+$$
+\begin{aligned}
+RHS &= \cos(\theta) + u\sin(\theta)\\
+&= \sum_{n=0}^{\infty}{\frac{(-1)^n}{(2n)!}\theta^{2n}} + u\sum_{n=0}^{\infty}{\frac{(-1)^n}{(2n + 1)!}\theta^{2n + 1}}\\
+&= 1 + u\theta - \frac{\theta^2}{2!} - \frac{u\theta^3}{3!} + \frac{\theta^4}{4!} + \frac{u\theta^5}{5!} - \dots = LHS
+\end{aligned}
+$$
+
+因为 $\pmb{u}$ 是一个单位向量，$u^2 = [-\pmb{u}\cdot\pmb{u}, \pmb{0}] = -\lVert u \rVert^2 = -1$，这与欧拉公式中的 $i$ 是非常类似的。
+
+有了指数型的表示方式，我们就能够将之前四元数的旋转公式改写为指数形式了：
+
+{% note primary %}
+**Theorem 12：3D 旋转公式（指数型）**  
+任意向量 $\pmb{v}$ 沿着以单位向量定义的旋转轴 $\pmb{u}$ 旋转 $\theta$ 度之后的 $\pmb{v'}$ 可以使用四元数的指数表示。令 $v = [0, \pmb{v}]，u = [0, \pmb{u}]$，那么：
+$$
+v' = e^{u\frac{\theta}{2}}ve^{-u\frac{\theta}{2}}
+$$
+{% endnote %}
+
+有了四元数的指数定义，我们就能够定义四元数的更多运算了，首先是自然对数 $\log$，对任意单位四元数 $q = [\cos(\theta), \sin(\theta)\pmb{u}]$，
+$$
+\log(q) = \log(e^{u\theta}) = [0, \pmb{u}\theta]
+$$
+接下来是四元数的幂运算
+$$
+q^t = (e^{u\theta})^t = e^{u(t\theta)} = [\cos(t\theta), \sin(t\theta)\pmb{u}]
+$$
+可以看到，一个单位四元数的 $t$ 次幂等同于将它的旋转角缩放至 $t$ 倍，并且不会改变它的旋转轴（$u$ 必须是单位向量，所以一般不能与 $t$ 结合）。这些运算会在之后讨论四元数插值时非常有用。
