--- a/source/_posts/四元数和三维旋转(三).md
+++ b/source/_posts/四元数和三维旋转(三).md
@@ -361,3 +361,11 @@ $s_{i}$ 的推导还是比较复杂的，但是它最基本的理念非常简单
 $$
 Squad'(q_{i-1}, s_{i-1}, s_{i}, q_{i}; 1) = Squad'(q_{i}, s_{i}, s_{i+1}, q_{i+1}; 0)
 $$
+
+如果我们想要从这里继续推导下去的话，就需要用到单位四元数导数的定义（它和 $q = [\cos(\theta), \sin(\theta)\pmb{u}] = e^{u\theta}$ 有关）。最终得到
+$$
+s_{i} = q_{i}exp(-\frac{\log(q_{i}^*q_{i-1}) + \log(q_{i}^*q_{i+1})}{4})
+$$
+注意，和 Bézier 曲线的样条不同的是，这里的 $s_{i}$ 在对 $q_{i-1}q_{i}$ 插值时和对 $q_{i}q_{i+1}$ 插值时都是相同的，不像之前是处于切线的两端不同的两个向量。
+
+与两个四元数之间的插值一样，Squad 同样会受到双重覆盖的影响。我们在计算中间控制点和插值之前，需要先选中一个四元数，比如说 $q_{i}$，检测它与其它三个四元数之间的夹角，如果是钝角就翻转，将插值的路线减到最小。
