--- a/source/_posts/四元数和三维旋转(二).md
+++ b/source/_posts/四元数和三维旋转(二).md
@@ -247,7 +247,7 @@ $$
 
 ### 四元数与3D旋转 ###
 
-如果我们需要将一个向量 $\pmb{v}$ 沿着一个用单位向量所定义的旋转轴 $\pmb{u}$ 旋转 $\theta$ 度，那么我们可以将这个向量 $\pmb{v}$ 拆分为正交于旋转轴的 $\pmb{v_{\perp}}$ 以及平行于旋转轴的 $\pmb{v_{\parallel}}$。我们可以对这两个分向量分别进行旋转，获得 $\pmb{v_{\perp}'}$ 和 $\pmb{v_{\parallel}'}$。将它们相加就是 $\pmb{v}$ 旋转之后的结果 $\pmb{v'} = \pmb{v_{\perp}'} + \pmb{v_{\parallel}'$。
+如果我们需要将一个向量 $\pmb{v}$ 沿着一个用单位向量所定义的旋转轴 $\pmb{u}$ 旋转 $\theta$ 度，那么我们可以将这个向量 $\pmb{v}$ 拆分为正交于旋转轴的 $\pmb{v_{\perp}}$ 以及平行于旋转轴的 $\pmb{v_{\parallel}}$。我们可以对这两个分向量分别进行旋转，获得 $\pmb{v_{\perp}'}$ 和 $\pmb{v_{\parallel}'}$。将它们相加就是 $\pmb{v}$ 旋转之后的结果 $\pmb{v'} = \pmb{v_{\perp}'} + \pmb{v_{\parallel}'}$。
 
 我们可以将这些向量定义为纯四元数：
 
